# pyq

./: .gitignore  Cargo.toml  Justfile  README.md  dist-workspace.toml  pyproject.toml
.github/: build-setup.yml
.github/workflows/: release.yml
python/pyq/: __main__.py
src/: lib.rs  main.rs
