[package]
name = "pyq"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuadavidthomas/pyq"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
