[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyq"
version = "0.1.0"
description = "A Rust CLI to query information about your Python environment"
readme = "README.md"
authors = [
    { name = "Josh", email = "josh@joshthomas.dev" }
]
requires-python = ">=3.12"
dependencies = []

[tool.maturin]
binding = "pyo3"
python-source = "python"
module-name = "pyq._cli"
