[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
authors = [
    { name = "Josh", email = "josh@joshthomas.dev" }
]
dependencies = []
description = "A Rust CLI to query information about your Python environment"
name = "pyq"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.scripts]
pyq = "pyq:main"

[tool.maturin]
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "rust-toolchain.toml", format = ["sdist", "wheel"] },
]
strip = true
